--- a/index.html
+++ b/index.html
@@ -41,16 +41,16 @@
     <h2>Skills</h2>
     <div class="tech-stacks">
       <div class="tech-stacks-img">
-        <img src="./public/img/skils/logo-javascript.svg" alt="javascript" />
-        <img src="./public/img/skils/react.svg" alt="react" />
-        <img src="./public/img/skils/html-1.svg" alt="html" />
-        <img src="./public/img/skils/css.svg" alt="css" />
-        <img src="./public/img/skils/tailwind.svg" alt="tailwind" />
-        <img src="./public/img/skils/nodejs.svg" alt="node" />
-        <img src="./public/img/skils/sqlite.svg" alt="sqlite" />
-        <img src="./public/img/skils/postgresql.svg" alt="postgresql" />
-        <img src="./public/img/skils/github.svg" alt="github" />
-        <img src="./public/img/skils/visual-studio-code.svg" alt="vscode" />
+        <img class="stacks-img" src="./public/img/skils/logo-javascript.svg" alt="javascript" />
+        <img class="stacks-img" src="./public/img/skils/react.svg" alt="react" />
+        <img class="stacks-img" src="./public/img/skils/html-1.svg" alt="html" />
+        <img class="stacks-img" src="./public/img/skils/css.svg" alt="css" />
+        <img class="stacks-img" src="./public/img/skils/tailwind.svg" alt="tailwind" />
+        <img class="stacks-img" src="./public/img/skils/nodejs.svg" alt="node" />
+        <img class="stacks-img" src="./public/img/skils/sqlite.svg" alt="sqlite" />
+        <img class="stacks-img" src="./public/img/skils/postgresql.svg" alt="postgresql" />
+        <img class="stacks-img" src="./public/img/skils/github.svg" alt="github" />
+        <img class="stacks-img" src="./public/img/skils/visual-studio-code.svg" alt="vscode" />
       </div>
       <div class="tech-stacks-text">
         <p>
