--- a/index.html
+++ b/index.html
@@ -1,107 +1,211 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="./client/assets/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=Poppins:wght@400;600&display=swap"
+      rel="stylesheet"
+    />
+    <link href="./styles/index.css" rel="stylesheet" />
+    <script type="module" src="./index.js"></script>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="./client/assets/favicon.ico" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Portfolio</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;600;700&display=swap"
-    rel="stylesheet" />
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=Poppins:wght@400;600&display=swap"
-    rel="stylesheet" />
-  <link href="./styles/index.css" rel="stylesheet" />
-  <script type="module" src="./index.js"></script>
-</head>
+  <body>
+    <!-- HEADER -->
+    <header>
+      <nav class="nav-el">
+        <a href="#skils-section">Skills</a>
+        <a href="#projects">My projects</a>
+        <a href="#about-me-section">About me</a>
+      </nav>
+    </header>
 
-<body>
-  <!-- HEADER -->
-  <header>
-    <nav class="nav-el">
-      <a href="https://github.com/dspodina" target="_blank">GitHub</a>
-      <a href="https://www.linkedin.com/in/daria-spodina/" target="_blank">LinkedIn</a>
-    </nav>
-  </header>
-
-  <!-- ABOUT SECTION -->
-  <div class="about-section">
-    <img class="logo-img" src="./public/img/portfolio-logo.svg" alt="" />
-    <div class="about-text">
-      <h2>Hello!</h2>
-      <p id="about-me"></p>
-    </div>
-  </div>
-
-  <!-- TECH STACKS -->
-  <div class="skils-section container">
-    <h2>Skills</h2>
-    <div class="tech-stacks">
-      <div class="tech-stacks-img">
-        <img class="stacks-img" src="./public/img/skils/logo-javascript.svg" alt="javascript" />
-        <img class="stacks-img" src="./public/img/skils/react.svg" alt="react" />
-        <img class="stacks-img" src="./public/img/skils/html-1.svg" alt="html" />
-        <img class="stacks-img" src="./public/img/skils/css.svg" alt="css" />
-        <img class="stacks-img" src="./public/img/skils/tailwind.svg" alt="tailwind" />
-        <img class="stacks-img" src="./public/img/skils/nodejs.svg" alt="node" />
-        <img class="stacks-img" src="./public/img/skils/sqlite.svg" alt="sqlite" />
-        <img class="stacks-img" src="./public/img/skils/postgresql.svg" alt="postgresql" />
-        <img class="stacks-img" src="./public/img/skils/github.svg" alt="github" />
-        <img class="stacks-img" src="./public/img/skils/visual-studio-code.svg" alt="vscode" />
+    <!-- ABOUT SECTION -->
+    <div class="about-section" id="about-section">
+      <img class="logo-img" src="./public/img/portfolio-logo.svg" alt="" />
+      <div class="about-text">
+        <h2>Hello!</h2>
+        <p id="about-me"></p>
       </div>
-      <div class="tech-stacks-text">
+    </div>
+
+    <!-- TECH STACKS -->
+    <div class="skils-section container" id="skils-section">
+      <h2>Skills</h2>
+      <div class="tech-stacks">
+        <div class="tech-stacks-img">
+          <img
+            class="stacks-img"
+            src="./public/img/skils/logo-javascript.svg"
+            alt="javascript"
+          />
+          <img
+            class="stacks-img"
+            src="./public/img/skils/react.svg"
+            alt="react"
+          />
+          <img
+            class="stacks-img"
+            src="./public/img/skils/html-1.svg"
+            alt="html"
+          />
+          <img class="stacks-img" src="./public/img/skils/css.svg" alt="css" />
+          <img
+            class="stacks-img"
+            src="./public/img/skils/tailwind.svg"
+            alt="tailwind"
+          />
+          <img
+            class="stacks-img"
+            src="./public/img/skils/nodejs.svg"
+            alt="node"
+          />
+          <img
+            class="stacks-img"
+            src="./public/img/skils/sqlite.svg"
+            alt="sqlite"
+          />
+          <img
+            class="stacks-img"
+            src="./public/img/skils/postgresql.svg"
+            alt="postgresql"
+          />
+          <img
+            class="stacks-img"
+            src="./public/img/skils/github.svg"
+            alt="github"
+          />
+          <img
+            class="stacks-img"
+            src="./public/img/skils/visual-studio-code.svg"
+            alt="vscode"
+          />
+        </div>
+        <div class="tech-stacks-text">
+          <p>
+            As a Junior Full Stack Developer, I bring expertise in both
+            front-end and back-end technologies. Proficient in HTML, CSS,
+            JavaScript, and frameworks like React.js, I craft engaging user
+            interfaces. On the back end, I work with Node.js, and manage
+            databases using SQL or NoSQL solutions.
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <!-- PROJECTS -->
+    <div class="project container" id="projects">
+      <h2>My projects</h2>
+      <div class="project-card">
+        <h3>Parapa Parler</h3>
+        <p>
+          It is a long established fact that a reader will be distracted by the
+          readable content of a page when looking at its layout. The point of
+          using Lorem Ipsum is that it has a more-or-less normal distribution of
+          letters, as opposed to using 'Content here, content here', making it
+          look like readable English.
+        </p>
+        <a href="#">Go to code</a>
+      </div>
+      <div class="project-card-back hidden">
+        <h3>Technology used</h3>
+        <ul>
+          <li>Development: React</li>
+          <li>Styled: Tailwind</li>
+          <li>Configured: NextJS@13</li>
+          <li>Deploy: Netlify</li>
+          <li>APIs RapidAPI</li>
+        </ul>
+      </div>
+      <div class="project-card">
+        <h3>Meme Generator</h3>
+        <p>
+          It is a long established fact that a reader will be distracted by the
+          readable content of a page when looking at its layout. The point of
+          using Lorem Ipsum is that it has a more-or-less normal distribution of
+          letters, as opposed to using 'Content here, content here', making it
+          look like readable English.
+        </p>
+        <a href="#">Go to code</a>
+      </div>
+      <div class="project-card-back hidden">
+        <h3>Technology used</h3>
+        <ul>
+          <li>Development: React</li>
+          <li>Styled: Tailwind</li>
+          <li>Configured: Vite</li>
+          <li>Deploy: Vercel</li>
+          <li>APIs</li>
+        </ul>
+      </div>
+      <div class="project-card">
+        <h3>Black Jack</h3>
+        <p>
+          It is a long established fact that a reader will be distracted by the
+          readable content of a page when looking at its layout. The point of
+          using Lorem Ipsum is that it has a more-or-less normal distribution of
+          letters, as opposed to using 'Content here, content here', making it
+          look like readable English.
+        </p>
+        <a href="#">Go to code</a>
+      </div>
+      <div class="project-card-back hidden">
+        <h3>Technology used</h3>
+        <ul>
+          <li>Development: Vanilla JS</li>
+          <li>Styled: CSS</li>
+        </ul>
+      </div>
+    </div>
+
+    <!-- About me  -->
+
+    <div class="about-me container" id="about-me-section">
+      <div>
+        <h2>About me</h2>
         <p>
           a Junior Web Developer with a passion for crafting engaging websites
           and a strong interest in UI design. I'm thrilled about the limitless
-          possibilities in the web development realm, always eager to learn
-          and contribute to innovative projects. Let's connect and explore the
-          exciting journey of creating impactful digital experiences! 💻🎨
+          possibilities in the web development realm, always eager to learn and
+          contribute to innovative projects. Let's connect and explore the
+          exciting journey of creating impactful digital experiences!
         </p>
+        <a href="https://github.com/dspodina" target="_blank"
+          ><img
+            class="about-me-icons"
+            src="./public/img/github.svg"
+            alt="GitHub"
+        /></a>
+        <a href="https://www.linkedin.com/in/daria-spodina/" target="_blank"
+          ><img
+            class="about-me-icons"
+            src="./public/img/linkedin.svg"
+            alt="LinkedIn"
+        /></a>
+      </div>
+      <div class="">
+        <img
+          class="about-me-photo"
+          src="./public/img/1665256580750.jpeg"
+          alt="Spodina Daria"
+        />
       </div>
     </div>
-  </div>
 
-  <!-- PROJECTS -->
-  <div class="project-section container">
-    <h2>My projects</h2>
-    <div class="project-cards">
-      <div class="project-el">
-        <a href="https://github.com/dspodina/Conjugaison-Francais" target="_blank"><img
-            src="./public/img/parapaparler.png" alt="" /></a>
-        <h3>Conjugaison francais</h3>
-      </div>
-      <div class="project-el">
-        <a href="https://github.com/dspodina/Meme-Generator" target="_blank"><img src="./public/img/meme-generator.png"
-            alt="" /></a>
-        <h3>Meme Generator</h3>
-      </div>
-      <div class="project-el">
-        <a href="https://dspodina.github.io/Blackjack/" target="_blank"><img src="./public/img/black-jack.png"
-            alt="" /></a>
-        <h3>Black Jack</h3>
-      </div>
-    </div>
-  </div>
-
-  <!-- CONTACTS
-
-  <div class="contact-form container">
-    <form>
-      <label for="name">First Name</label>
-      <input type="text" id="name" name="name" placeholder="Your name..">
-      <label for="subject">Subject</label>
-      <textarea id="subject" name="subject" placeholder="Write something.."></textarea>
-      <input type="submit" value="Submit">
-    </form>
-  </div> -->
-
-  <!-- FOOTER -->
-  <footer>
-    <p>Junior Full stack Developer - Spodina Daria © 2024</p>
-  </footer>
-</body>
-
+    <!-- FOOTER -->
+    <footer>
+      <p>Junior Full stack Developer - Spodina Daria © 2024</p>
+    </footer>
+  </body>
 </html>
