mobile, tablet and desktop responsive added

--- a/index.html
+++ b/index.html
@@ -124,13 +124,11 @@
       </div>
       <div class="project-card-back hidden">
         <h3>Technology used</h3>
-        <ul>
-          <li>Development: React</li>
-          <li>Styled: Tailwind</li>
-          <li>Configured: NextJS@13</li>
-          <li>Deploy: Netlify</li>
-          <li>APIs RapidAPI</li>
-        </ul>
+        <p>Development: React</p>
+        <p>Styled: Tailwind</p>
+        <p>Configured: NextJS@13</p>
+        <p>Deploy: Netlify</p>
+        <p>APIs RapidAPI</p>
       </div>
       <div class="project-card">
         <h3>Meme Generator</h3>
@@ -145,13 +143,11 @@
       </div>
       <div class="project-card-back hidden">
         <h3>Technology used</h3>
-        <ul>
-          <li>Development: React</li>
-          <li>Styled: Tailwind</li>
-          <li>Configured: Vite</li>
-          <li>Deploy: Vercel</li>
-          <li>APIs</li>
-        </ul>
+        <p>Development: React</p>
+        <p>Styled: Tailwind</p>
+        <p>Configured: Vite</p>
+        <p>Deploy: Vercel</p>
+        <p>APIs</p>
       </div>
       <div class="project-card">
         <h3>Black Jack</h3>
@@ -166,10 +162,8 @@
       </div>
       <div class="project-card-back hidden">
         <h3>Technology used</h3>
-        <ul>
-          <li>Development: Vanilla JS</li>
-          <li>Styled: CSS</li>
-        </ul>
+        <p>Development: Vanilla JS</p>
+        <p>Styled: CSS</p>
       </div>
     </div>
 
