fixed responsive, changed elements style

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           />
           <img class="stacks-img" src="./public/img/skils/css.svg" alt="css" />
           <img
-            class="stacks-img"
+            class="stacks-img-2"
             src="./public/img/skils/tailwind.svg"
             alt="tailwind"
           />
@@ -84,7 +84,7 @@
             alt="postgresql"
           />
           <img
-            class="stacks-img"
+            class="stacks-img-2"
             src="./public/img/skils/github.svg"
             alt="github"
           />
@@ -92,6 +92,11 @@
             class="stacks-img"
             src="./public/img/skils/visual-studio-code.svg"
             alt="vscode"
+          />
+          <img
+            class="stacks-img-2"
+            src="./public/img/skils/figma-5.svg"
+            alt="figma"
           />
         </div>
         <div class="tech-stacks-text">
@@ -109,76 +114,104 @@
     <!-- PROJECTS -->
     <div class="project container" id="projects">
       <div class="project-title">
-        <h2>My projects</h2>
+        <h2>My Projects</h2>
       </div>
-      <div class="project-card">
-        <h3>Parapa Parler</h3>
-        <p>
-          It is a long established fact that a reader will be distracted by the
-          readable content of a page when looking at its layout. The point of
-          using Lorem Ipsum is that it has a more-or-less normal distribution of
-          letters, as opposed to using 'Content here, content here', making it
-          look like readable English.
-        </p>
-        <a href="#">Go to code</a>
+
+      <!-- Project 1 -->
+      <div class="project-item">
+        <div class="project-card">
+          <h3>Parapa Parler</h3>
+          <p>
+            An app for practicing French verb conjugation, allows you to
+            practice verbs with different tenses and pronouns.
+          </p>
+        </div>
+        <a
+          href="https://github.com/dspodina/Conjugaison-Francais"
+          target="_blank"
+        >
+          <button class="toggle-details">Go to code</button>
+        </a>
       </div>
-      <div class="project-card-back hidden">
-        <h3>Technology used</h3>
-        <p>Development: React</p>
-        <p>Styled: Tailwind</p>
-        <p>Configured: NextJS@13</p>
-        <p>Deploy: Netlify</p>
-        <p>APIs RapidAPI</p>
+
+      <!-- Project 2 -->
+      <div class="project-item">
+        <div class="project-card">
+          <h3>Meme Generator</h3>
+          <p>
+            The Meme Generator App, built on React with Tailwind styling and
+            Vite, lets users create and customize memes effortlessly.
+          </p>
+        </div>
+        <a href="https://github.com/dspodina/Meme-Generator" target="_blank">
+          <button class="toggle-details">Go to code</button>
+        </a>
       </div>
-      <div class="project-card">
-        <h3>Meme Generator</h3>
-        <p>
-          It is a long established fact that a reader will be distracted by the
-          readable content of a page when looking at its layout. The point of
-          using Lorem Ipsum is that it has a more-or-less normal distribution of
-          letters, as opposed to using 'Content here, content here', making it
-          look like readable English.
-        </p>
-        <a href="#">Go to code</a>
-      </div>
-      <div class="project-card-back hidden">
-        <h3>Technology used</h3>
-        <p>Development: React</p>
-        <p>Styled: Tailwind</p>
-        <p>Configured: Vite</p>
-        <p>Deploy: Vercel</p>
-        <p>APIs</p>
-      </div>
-      <div class="project-card">
-        <h3>Black Jack</h3>
-        <p>
-          It is a long established fact that a reader will be distracted by the
-          readable content of a page when looking at its layout. The point of
-          using Lorem Ipsum is that it has a more-or-less normal distribution of
-          letters, as opposed to using 'Content here, content here', making it
-          look like readable English.
-        </p>
-        <a href="#">Go to code</a>
-      </div>
-      <div class="project-card-back hidden">
-        <h3>Technology used</h3>
-        <p>Development: Vanilla JS</p>
-        <p>Styled: CSS</p>
+
+      <!-- Project 3 -->
+      <div class="project-item">
+        <div class="project-card">
+          <h3>Blackjack</h3>
+          <p>
+            Derived from the casino banking game family Twenty-One, is the most
+            popular card game globally, played with decks of 52 cards.
+          </p>
+        </div>
+        <a href="https://github.com/dspodina/Blackjack" target="_blank">
+          <button class="toggle-details">Go to code</button>
+        </a>
       </div>
     </div>
 
     <!-- About me  -->
 
     <div class="about-me container" id="about-me-section">
-      <div>
+      <div class="about-me-title">
         <h2>About me</h2>
-        <p>
-          a Junior Web Developer with a passion for crafting engaging websites
-          and a strong interest in UI design. I'm thrilled about the limitless
-          possibilities in the web development realm, always eager to learn and
-          contribute to innovative projects. Let's connect and explore the
-          exciting journey of creating impactful digital experiences!
-        </p>
+      </div>
+      <div class="about-me-bio">
+        <div>
+          <img
+            class="about-me-photo"
+            src="./public/img/1665256580750.jpeg"
+            alt="Spodina Daria"
+          />
+        </div>
+        <div class="text-stat-div">
+          <div class="about-me-text">
+            <p>
+              a Junior Web Developer with a passion for crafting engaging
+              websites and a strong interest in UI design. I'm thrilled about
+              the limitless possibilities in the web development realm, always
+              eager to learn and contribute to innovative projects. Let's
+              connect and explore the exciting journey of creating impactful
+              digital experiences!
+            </p>
+          </div>
+          <div class="my-stat">
+            <div>
+              <h3>10</h3>
+              <p>Projects</p>
+            </div>
+            <div>
+              <h3>1 year</h3>
+              <p>Experiences</p>
+            </div>
+            <div>
+              <h3>200+</h3>
+              <p>Hours of coding</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- FOOTER -->
+    <footer>
+      <div>
+        <p>Junior Full stack Developer - Spodina Daria © 2024</p>
+      </div>
+      <div>
         <a href="https://github.com/dspodina" target="_blank"
           ><img
             class="about-me-icons"
@@ -192,18 +225,6 @@
             alt="LinkedIn"
         /></a>
       </div>
-      <div class="">
-        <img
-          class="about-me-photo"
-          src="./public/img/1665256580750.jpeg"
-          alt="Spodina Daria"
-        />
-      </div>
-    </div>
-
-    <!-- FOOTER -->
-    <footer>
-      <p>Junior Full stack Developer - Spodina Daria © 2024</p>
     </footer>
   </body>
 </html>
