--- a/index.html
+++ b/index.html
@@ -1,173 +1,230 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="./client/assets/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=Poppins:wght@400;600&display=swap"
+      rel="stylesheet"
+    />
+    <link href="./styles/index.css" rel="stylesheet" />
+    <script type="module" src="./index.js"></script>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="./client/assets/favicon.ico" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Portfolio</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;600;700&display=swap"
-    rel="stylesheet" />
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=Poppins:wght@400;600&display=swap"
-    rel="stylesheet" />
-  <link href="./styles/index.css" rel="stylesheet" />
-  <script type="module" src="./index.js"></script>
-</head>
+  <body>
+    <!-- HEADER -->
+    <header>
+      <nav class="nav-el">
+        <a href="#skils-section">Skills</a>
+        <a href="#projects">My projects</a>
+        <a href="#about-me-section">About me</a>
+      </nav>
+    </header>
 
-<body>
-  <!-- HEADER -->
-  <header>
-    <nav class="nav-el">
-      <a href="#skils-section">Skills</a>
-      <a href="#projects">My projects</a>
-      <a href="#about-me-section">About me</a>
-    </nav>
-  </header>
-
-  <!-- ABOUT SECTION -->
-  <div class="about-section" id="about-section">
-    <img class="logo-img" src="./public/img/portfolio-logo.svg" alt="" />
-    <div class="about-text">
-      <h2>Hello!</h2>
-      <p id="about-me"></p>
-    </div>
-  </div>
-
-  <!-- TECH STACKS -->
-  <div class="skills-section container" id="skils-section">
-    <div class="skills-title">
-      <h2>Skills</h2>
-    </div>
-    <div class="tech-stacks">
-      <div class="tech-stacks-img">
-        <img class="stacks-img" src="./public/img/skils/logo-javascript.svg" alt="javascript" />
-        <img class="stacks-img" src="./public/img/skils/react.svg" alt="react" />
-        <img class="stacks-img" src="./public/img/skils/html-1.svg" alt="html" />
-        <img class="stacks-img" src="./public/img/skils/css.svg" alt="css" />
-        <img class="stacks-img-2" src="./public/img/skils/tailwind.svg" alt="tailwind" />
-        <img class="stacks-img" src="./public/img/skils/nodejs.svg" alt="node" />
-        <img class="stacks-img" src="./public/img/skils/sqlite.svg" alt="sqlite" />
-        <img class="stacks-img" src="./public/img/skils/postgresql.svg" alt="postgresql" />
-        <img class="stacks-img-2" src="./public/img/skils/github.svg" alt="github" />
-        <img class="stacks-img" src="./public/img/skils/visual-studio-code.svg" alt="vscode" />
-        <img class="stacks-img-2" src="./public/img/skils/figma-5.svg" alt="figma" />
-      </div>
-      <div class="tech-stacks-text">
-        <p>
-          As a Junior Full Stack Developer, I bring expertise in both
-          front-end and back-end technologies. Proficient in HTML, CSS,
-          JavaScript, and frameworks like React.js, I craft engaging user
-          interfaces. On the back end, I work with Node.js, and manage
-          databases using SQL or NoSQL solutions.
-        </p>
+    <!-- ABOUT SECTION -->
+    <div class="about-section" id="about-section">
+      <img class="logo-img" src="./public/img/portfolio-logo.svg" alt="" />
+      <div class="about-text">
+        <h2>Hello!</h2>
+        <p id="about-me"></p>
       </div>
     </div>
-  </div>
 
-  <!-- PROJECTS -->
-  <div class="project container" id="projects">
-    <div class="project-title">
-      <h2>My Projects</h2>
-    </div>
-
-    <!-- Project 1 -->
-    <div class="project-item">
-      <div class="project-card">
-        <h3>Parapa Parler</h3>
-        <p>
-          An app for practicing French verb conjugation, allows you to
-          practice verbs with different tenses and pronouns.
-        </p>
+    <!-- TECH STACKS -->
+    <div class="skills-section container" id="skils-section">
+      <div class="skills-title">
+        <h2>Skills</h2>
       </div>
-      <a href="https://github.com/dspodina/Conjugaison-Francais" target="_blank">
-        <button type="button" class="toggle-details">Go to code</button>
-      </a>
-    </div>
-
-    <!-- Project 2 -->
-    <div class="project-item">
-      <div class="project-card">
-        <h3>Meme Generator</h3>
-        <p>
-          The Meme Generator App, built on React with Tailwind styling and
-          Vite, lets users create and customize memes effortlessly.
-        </p>
-      </div>
-      <a href="https://github.com/dspodina/Meme-Generator" target="_blank">
-        <button type="button" class="toggle-details">Go to code</button>
-      </a>
-    </div>
-
-    <!-- Project 3 -->
-    <div class="project-item">
-      <div class="project-card">
-        <h3>Blackjack</h3>
-        <p>
-          Derived from the casino banking game family Twenty-One, is the most
-          popular card game globally, played with decks of 52 cards.
-        </p>
-      </div>
-      <a href="https://github.com/dspodina/Blackjack" target="_blank">
-        <button type="button" class="toggle-details">Go to code</button>
-      </a>
-    </div>
-  </div>
-
-  <!-- About me  -->
-
-  <div class="about-me container" id="about-me-section">
-    <div class="about-me-title">
-      <h2>About me</h2>
-    </div>
-    <div class="about-me-bio">
-      <div>
-        <img class="about-me-photo" src="./public/img/1665256580750.jpeg" alt="Spodina Daria" />
-      </div>
-      <div class="text-stat-div">
-        <div class="about-me-text">
+      <div class="tech-stacks">
+        <div class="tech-stacks-img">
+          <img
+            class="stacks-img"
+            src="./public/img/skils/logo-javascript.svg"
+            alt="javascript"
+          />
+          <img
+            class="stacks-img"
+            src="./public/img/skils/react.svg"
+            alt="react"
+          />
+          <img
+            class="stacks-img"
+            src="./public/img/skils/html-1.svg"
+            alt="html"
+          />
+          <img class="stacks-img" src="./public/img/skils/css.svg" alt="css" />
+          <img
+            class="stacks-img-2"
+            src="./public/img/skils/tailwind.svg"
+            alt="tailwind"
+          />
+          <img
+            class="stacks-img"
+            src="./public/img/skils/nodejs.svg"
+            alt="node"
+          />
+          <img
+            class="stacks-img"
+            src="./public/img/skils/sqlite.svg"
+            alt="sqlite"
+          />
+          <img
+            class="stacks-img"
+            src="./public/img/skils/postgresql.svg"
+            alt="postgresql"
+          />
+          <img
+            class="stacks-img-2"
+            src="./public/img/skils/github.svg"
+            alt="github"
+          />
+          <img
+            class="stacks-img"
+            src="./public/img/skils/visual-studio-code.svg"
+            alt="vscode"
+          />
+          <img
+            class="stacks-img-2"
+            src="./public/img/skils/figma-5.svg"
+            alt="figma"
+          />
+        </div>
+        <div class="tech-stacks-text">
           <p>
-            a Junior Web Developer with a passion for crafting engaging
-            websites and a strong interest in UI design. I'm thrilled about
-            the limitless possibilities in the web development realm, always
-            eager to learn and contribute to innovative projects. Let's
-            connect and explore the exciting journey of creating impactful
-            digital experiences!
+            As a Junior Full Stack Developer, I bring expertise in both
+            front-end and back-end technologies. Proficient in HTML, CSS,
+            JavaScript, and frameworks like React.js, I craft engaging user
+            interfaces. On the back end, I work with Node.js, and manage
+            databases using SQL or NoSQL solutions.
           </p>
         </div>
-        <div class="my-stat">
-          <div>
-            <h3>10</h3>
-            <p>Projects</p>
+      </div>
+    </div>
+
+    <!-- PROJECTS -->
+    <div class="project container" id="projects">
+      <div class="project-title">
+        <h2>My Projects</h2>
+      </div>
+
+      <!-- Project 1 -->
+      <div class="project-item">
+        <div class="project-card">
+          <h3>Parapa Parler</h3>
+          <p>
+            An app for practicing French verb conjugation, allows you to
+            practice verbs with different tenses and pronouns.
+          </p>
+        </div>
+        <a
+          href="https://github.com/dspodina/Conjugaison-Francais"
+          target="_blank"
+        >
+          <button type="button" class="toggle-details">Go to code</button>
+        </a>
+      </div>
+
+      <!-- Project 2 -->
+      <div class="project-item">
+        <div class="project-card">
+          <h3>Meme Generator</h3>
+          <p>
+            The Meme Generator App, built on React with Tailwind styling and
+            Vite, lets users create and customize memes effortlessly.
+          </p>
+        </div>
+        <a href="https://github.com/dspodina/Meme-Generator" target="_blank">
+          <button type="button" class="toggle-details">Go to code</button>
+        </a>
+      </div>
+
+      <!-- Project 3 -->
+      <div class="project-item">
+        <div class="project-card">
+          <h3>Blackjack</h3>
+          <p>
+            Derived from the casino banking game family Twenty-One, is the most
+            popular card game globally, played with decks of 52 cards.
+          </p>
+        </div>
+        <a href="https://github.com/dspodina/Blackjack" target="_blank">
+          <button type="button" class="toggle-details">Go to code</button>
+        </a>
+      </div>
+    </div>
+
+    <!-- About me  -->
+
+    <div class="about-me container" id="about-me-section">
+      <div class="about-me-title">
+        <h2>About me</h2>
+      </div>
+      <div class="about-me-bio">
+        <div>
+          <img
+            class="about-me-photo"
+            src="./public/img/1665256580750.jpeg"
+            alt="Spodina Daria"
+          />
+        </div>
+        <div class="text-stat-div">
+          <div class="about-me-text">
+            <p>
+              a Junior Web Developer with a passion for crafting engaging
+              websites and a strong interest in UI design. I'm thrilled about
+              the limitless possibilities in the web development realm, always
+              eager to learn and contribute to innovative projects. Let's
+              connect and explore the exciting journey of creating impactful
+              digital experiences!
+            </p>
           </div>
-          <div>
-            <h3>1 year</h3>
-            <p>Experiences</p>
-          </div>
-          <div>
-            <h3>200+</h3>
-            <p>Hours of coding</p>
+          <div class="my-stat">
+            <div>
+              <h3>10</h3>
+              <p>Projects</p>
+            </div>
+            <div>
+              <h3>1 year</h3>
+              <p>Experiences</p>
+            </div>
+            <div>
+              <h3>200+</h3>
+              <p>Hours of coding</p>
+            </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
 
-  <!-- FOOTER -->
-  <footer>
-    <div>
-      <p>Junior Full stack Developer - Spodina Daria © 2024</p>
-    </div>
-    <div>
-      <a href="https://github.com/dspodina" target="_blank"><img class="about-me-icons" src="./public/img/github.svg"
-          alt="GitHub" /></a>
-      <a href="https://www.linkedin.com/in/daria-spodina/" target="_blank"><img class="about-me-icons"
-          src="./public/img/linkedin.svg" alt="LinkedIn" /></a>
-    </div>
-  </footer>
-</body>
-
+    <!-- FOOTER -->
+    <footer>
+      <div>
+        <p>Junior Full stack Developer - Spodina Daria © 2024</p>
+      </div>
+      <div>
+        <a href="https://github.com/dspodina" target="_blank"
+          ><img
+            class="about-me-icons"
+            src="./public/img/github.svg"
+            alt="GitHub"
+        /></a>
+        <a href="https://www.linkedin.com/in/daria-spodina/" target="_blank"
+          ><img
+            class="about-me-icons"
+            src="./public/img/linkedin.svg"
+            alt="LinkedIn"
+        /></a>
+      </div>
+    </footer>
+  </body>
 </html>
