--- a/index.html
+++ b/index.html
@@ -129,9 +129,9 @@
         <a
           href="https://github.com/dspodina/Conjugaison-Francais"
           target="_blank"
+          class="button"
+          >Go to code</a
         >
-          <button type="button" class="toggle-details">Go to code</button>
-        </a>
       </div>
 
       <!-- Project 2 -->
@@ -143,9 +143,12 @@
             Vite, lets users create and customize memes effortlessly.
           </p>
         </div>
-        <a href="https://github.com/dspodina/Meme-Generator" target="_blank">
-          <button type="button" class="toggle-details">Go to code</button>
-        </a>
+        <a
+          href="https://github.com/dspodina/Meme-Generator"
+          target="_blank"
+          class="button"
+          >Go to code</a
+        >
       </div>
 
       <!-- Project 3 -->
@@ -157,9 +160,12 @@
             popular card game globally, played with decks of 52 cards.
           </p>
         </div>
-        <a href="https://github.com/dspodina/Blackjack" target="_blank">
-          <button type="button" class="toggle-details">Go to code</button>
-        </a>
+        <a
+          href="https://github.com/dspodina/Blackjack"
+          target="_blank"
+          class="button"
+          >Go to code</a
+        >
       </div>
     </div>
 
