--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <img class="stacks-img" src="./public/img/skils/react.svg" alt="react" />
         <img class="stacks-img" src="./public/img/skils/html-1.svg" alt="html" />
         <img class="stacks-img" src="./public/img/skils/css.svg" alt="css" />
-        <img class="stacks-img-2" src="./public/img/skils/tailwind.svg" alt="tailwind" />
+        <img class="stacks-img" src="./public/img/skils/tailwind.svg" alt="tailwind" />
         <img class="stacks-img" src="./public/img/skils/nodejs.svg" alt="node" />
         <img class="stacks-img" src="./public/img/skils/sqlite.svg" alt="sqlite" />
         <img class="stacks-img" src="./public/img/skils/postgresql.svg" alt="postgresql" />
