--- a/index.html
+++ b/index.html
@@ -139,11 +139,11 @@
           </div>
           <div>
             <h3>1 year</h3>
-            <p>Experiences</p>
+            <p>Experience</p>
           </div>
           <div>
-            <h3>200+</h3>
-            <p>Hours of coding</p>
+            <h3>200+ hours</h3>
+            <p>Of coding</p>
           </div>
         </div>
       </div>
